Avoid ugly search bar when using a dark theme
Declare `background-color` so the search bar doesn't look like this:
http://www.pasteall.org/pic/show.php?id=82817

Reviewers: gregzaal

Reviewed By: gregzaal

Projects: #documentation

Differential Revision: https://developer.blender.org/D1030

--- a/blender_docs/theme/css/theme.css
+++ b/blender_docs/theme/css/theme.css
@@ -2500,6 +2500,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="url
     font-size: 80%;
     font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
     box-shadow: inset 0 1px 3px #ddd;
+    background-color:#FCFCFC; /* ensure background is light color even when a local theme wants it to be dark */
     border-radius: 0;
     -webkit-transition: border 0.3s linear;
     -moz-transition: border 0.3s linear;
@@ -4470,4 +4471,3 @@ img {
 }span[id*='MathJax-Span'] {
     color: #404040;
 }
-
